# game-catalog

./: .editorconfig  .gitignore  AGENTS.md  CANONICAL_BASELINE.md  DEVELOPMENT_PLAN.md  DEVELOPMENT_PROCESS.md  README.md  SPEC_ANALYSIS.md  alembic.ini  pyproject.toml
docs/: INITIAL_IMPORT.md  LEGACY_DISCOVERY.md  PLATFORM_CATALOG.md
migrations/: env.py
specs/: 00_Visao_Geral.md  01_Escopo_e_Definicoes.md  02_Regras_de_Inclusao_e_Exclusao.md  03_Modelo_de_Dados_Comum.md  04_Catalogo_de_Franquias.md  05_Jogos_Presos_em_Plataformas.md  06_Decisoes_Consolidadas.md  07_Arquitetura_SQLite.md  08_Modelo_Relacional_Detalhado.md  09_Arquitetura_Python.md  10_Colecao_Pessoal_Hardware_e_Acessorios.md  11_Arquitetura_de_Exportacoes.md  12_Politica_de_Fontes_Coleta_e_Conflitos.md  13_Atualizacao_Incremental_Manutencao_e_Recuperacao.md  14_Experiencia_de_Uso_CLI_e_Interface_Futura.md  15_Plano_de_Implementacao_para_o_Codex.md  16_Revisao_Final_e_Protocolo_de_Dupla_Checagem.md  17_Decisoes_Canonicas_Datas_Dinheiro_IDs_e_Identidade.md  18_RFC_Consolidacao_v1_3.md  19_CHANGELOG_v1_3.md  20_PROMPT_AUDITORIA_FINAL.md  21_Matriz_Resolucao_Auditoria.md  22_Matriz_Cobertura.md  23_Matriz_Requisito_Persistencia.md  24_Lista_de_Invariantes.md  25_Testes_de_Propriedade.md  26_Sequencia_de_Migrations.md  27_Prova_Vertical_Minima.md  28_Pendencias.md  29_Relatorio_Revisao_Cruzada.md  30_Inventario_do_Pacote.md  README.md  identity_test_cases.md  schema_manifest.json
tests/: test_alembic.py  test_cli.py  test_database.py  test_identifiers.py  test_identity_service.py  test_legacy_pipeline.py  (+10 more)
(+53 files in other folders)
