[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "game-catalog"
version = "0.1.0"
description = "Catálogo pessoal local de jogos e hardware"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.14,<2",
  "pydantic>=2.10,<3",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "typer>=0.15,<1",
  "uuid6>=2025.0.1,<2026",
]

[dependency-groups]
dev = [
  "hypothesis>=6.120,<7",
  "mypy>=1.14,<2",
  "pytest>=8.3,<9",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[project.scripts]
game-catalog = "game_catalog.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/0005_catalog_facts_and_availability.py" = ["E501"]
"tests/test_migration_0005.py" = ["E501"]
"migrations/versions/0006_personal_collection.py" = ["E501"]
"tests/test_migration_0006.py" = ["E501"]
"migrations/versions/0007_hardware_and_playability.py" = ["E501"]
"tests/test_migration_0007.py" = ["E501"]
"migrations/versions/0008_incremental_operations.py" = ["E501"]
"tests/test_migration_0008.py" = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
packages = ["game_catalog"]
